@@ -16,6 +16,7 @@ New features:
 - 3469777: Scored snippets
 
 Bug fixes:
+- 3485241: Pages with meta noindex are indexed
 - 3483798: HTML parser prints many logs
 - 3483259: Underscore added when using synonyms on expression
 - 3482151: Monitor API response gives error
